--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
 <script src="https://kit.fontawesome.com/df603b5721.js" crossorigin="anonymous"></script>
 
 <!-- css -->
-<link rel="stylesheet" type="text/css" href="css/reset.css">
-<link rel="stylesheet" type="text/css" href="css/style.css">
+<link rel="stylesheet" type="text/css" href="/css/style.css">
 
 </head>
 <body>
