--- a/about/index.html
+++ b/about/index.html
@@ -61,7 +61,7 @@
 
     </header><!-- /.under-header -->
 
-    <div class="top-view">
+    <div class="top-view__about">
         <h1 class="page-title">About</h1><!-- /.page-title -->
     </div><!-- /.top-view -->
 
