--- a/products/index.html
+++ b/products/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 
-<title>さらや | ABOUT</title>
+<title>さらや | PRODUCTS</title>
 
 <meta name="description"  content="自由が丘にある、新人作家作品専門の食器屋さん">
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
