--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <li class="global-nav__item"><a href="#news" class="global-nav__link">News</a></li><!-- /.global-nav__item -->
                     <li class="global-nav__item"><a href="#events" class="global-nav__link">Events</a></li><!-- /.global-nav__item -->
                     <li class="global-nav__item"><a href="contact/index.html" class="global-nav__link">Contact</a></li><!-- /.global-nav__item -->
-                    <li class="global-nav__item"><a href="#access" class="global-nav__link">Access</a></li><!-- /.global-nav__item -->
+                    <li class="global-nav__item"><a href="#access" class="global-nav__link"><i class="fas fa-map-marker-alt"></i></a></li><!-- /.global-nav__item -->
                 </ul><!-- /.global-nav__items -->
             </nav><!-- /.global-nav -->
 
@@ -55,7 +55,7 @@
     <main class="main__inner">
 
         <!-- about -->
-        <section class="about">
+        <section id="about" class="about">
             <h2 class="section-title_left">About</h2><!-- /.section-title -->
 
             <div class="about-contents">
@@ -64,7 +64,7 @@
         </section><!-- /.about -->
 
         <!-- products -->
-        <section class="products">
+        <section id="products" class="products">
 
             <div class="products-contents">
 
@@ -117,7 +117,7 @@
         </section><!-- /.products -->
 
         <!-- news -->
-        <section class="news">
+        <section id="news" class="news">
 
             <div class="news-contents">
 
@@ -159,7 +159,7 @@
         </section><!-- /.news -->
 
         <!-- events -->
-        <section class="events">
+        <section id="events" class="events">
 
             <div class="events-contents">
 
@@ -219,7 +219,7 @@
         </section><!-- /.events -->
 
         <!-- access -->
-        <section class="access">
+        <section id="access" class="access">
 
             <div class="access-contents">
 
