--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
 
     <!-- main view -->
-    <div class="mv">
+    <div class="mv layer_white">
         <div class="mv__inner">
 
             <div class="mv-contents">
@@ -56,9 +56,9 @@
 
         <!-- about -->
         <section id="about" class="about">
-            <h2 class="section-title_left">About</h2><!-- /.section-title -->
+            <h2 class="section-title section-title_left">About</h2><!-- /.section-title -->
 
-            <div class="about-contents">
+            <div class="about-contents layer_white layer_round">
                 <p class="about__lead-text">毎日の食卓にそっと寄り添う、あなただけのうつわ。</p><!-- /.about__lead-text -->
             </div><!-- /.about-contents -->
         </section><!-- /.about -->
@@ -123,7 +123,7 @@
 
                 <div class="news-contents__flex-wrapper">
 
-                    <h2 class="section-title_left">News</h2><!-- /.section-title -->
+                    <h2 class="section-title section-title_left">News</h2><!-- /.section-title -->
 
                     <div class="btn-wrapper">
                         <a href="#" class="btn round-btn">All</a><!-- /.btn -->
@@ -255,7 +255,7 @@
 
             <div class="sns-contents">
 
-                <h2 class="section-title">Follow us</h2><!-- /.section-title -->
+                <h2 class="section-title section-title_cap">Follow us</h2><!-- /.section-title -->
 
                 <ul class="sns-list">
                     <li class="sns-list__item"><a href="#" class="sns-list__link"><i class="fab fa-instagram"></i></a></li><!-- /.sns-list__item -->
