[Add]top-events

--- a/index.html
+++ b/index.html
@@ -166,54 +166,57 @@
 
             <div class="events-contents contents_mt">
 
-                <div class="events-banner">
+                <div class="events-banner layer_white layer_br20">
                     <img src="/top/img/top_events.jpg" alt="金継ぎ体験のバナー画像" width="1108" height="200" loading="lazy" decoding="async">
+                    <h3 class="events-title">金継ぎ体験</h3><!-- /.events-title -->
                 </div><!-- /.events-banner -->
 
-                <p class="events__lead-text">欠けたり割れてしまった陶磁器を、漆で接着し、金で装飾する修復方法を「金継ぎ」といいます。<br>金継ぎによって生まれ変わる食器たちの、新たな表情を見てみませんか？</p><!-- /.events__lead-text -->
+                <div class="events__info-wrapper">
+                    <p class="events__lead-text">欠けたり割れてしまった陶磁器を、漆で接着し、金で装飾する修復方法を「金継ぎ」といいます。<br>金継ぎによって生まれ変わる食器たちの、新たな表情を見てみませんか？</p><!-- /.events__lead-text -->
 
-                <table class="events__info-table">
-                    <tr>
-                        <th>日時</th>
-                        <td>月1回不定期</td>
-                        <td>ホームページ内のNEWSにてお知らせいたします。</td>
-                    </tr>
+                    <table class="events__info-table">
+                        <tr>
+                            <th>日時</th>
+                            <td>月1回不定期<br>ホームページ内のNEWSにてお知らせいたします。</td>
+                        </tr>
 
-                    <tr>
-                        <th>定員</th>
-                        <td>10名</td>
-                    </tr>
+                        <tr>
+                            <th>定員</th>
+                            <td>10名</td>
+                        </tr>
 
-                    <tr>
-                        <th>費用</th>
-                        <td>2500円</td>
-                    </tr>
+                        <tr>
+                            <th>費用</th>
+                            <td>2500円</td>
+                        </tr>
 
-                    <tr>
-                        <th>お持ちいただくもの</th>
-                        <td>金継ぎしたい陶磁器</td>
-                        <td>汚れてもいい服やエプロン</td>
-                    </tr>
+                        <tr>
+                            <th>お持ちいただくもの</th>
+                            <td>金継ぎしたい陶磁器<br>汚れてもいい服やエプロン</td>
+                        </tr>
 
-                    <tr>
-                        <th>講師</th>
-                        <td>
-                            <div class="teacher-profile">
-                                <div class="teacher-profile__img">
-                                    <img src="/top/img/events_prof.jpg" alt="金継ぎ体験の講師の顔写真" width="160" height="160" loading="lazy" decoding="async">
-                                </div><!-- /.teacher-profile__img -->
+                        <tr>
+                            <th>講師</th>
+                        </tr>
 
-                                <p class="teacher-profile__name">yamada takashi</p><!-- /.teacher-profile__name -->
-                            </div><!-- /.teacher-profile -->
+                        <tr>
+                            <th>
+                                <div class="teacher-profile">
+                                    <div class="teacher-profile__img">
+                                        <img src="/top/img/events_prof.png" alt="金継ぎ体験の講師の顔写真" width="160" height="160" loading="lazy" decoding="async">
+                                    </div><!-- /.teacher-profile__img -->
 
-                            <p class="teacher-message">少しハードルが高く感じるかもしれませんが、<br>丁寧に指導いたしますのでお気軽にお参加ください。</p><!-- /.teacher-message -->
-                        </td>
-                    </tr>
-                </table><!-- /.events__info-table -->
+                                    <p class="teacher-profile__name">yamada takashi</p><!-- /.teacher-profile__name -->
+                                </div><!-- /.teacher-profile -->
+                            </th>
+                            <td>少しハードルが高く感じるかもしれませんが、<br>丁寧に指導いたしますのでお気軽にお参加ください。</td>
+                        </tr>
+                    </table><!-- /.events__info-table -->
 
-                <div class="btn-wrapper">
-                    <a href="products/index.html" class="btn arrow-btn">お申込みはこちら</a><!-- /.btn -->
-                </div><!-- /.btn-wrapper -->
+                    <div class="btn-wrapper events-btn_mt">
+                        <a href="contact/index.html" class="btn arrow-btn">お申込みはこちら</a><!-- /.btn -->
+                    </div><!-- /.btn-wrapper -->
+                </div><!-- /.events__info-wrapper -->
 
             </div><!-- /.events-contents -->
 
