--- a/index.html
+++ b/index.html
@@ -276,11 +276,11 @@
 
         <div class="footer-contents">
 
-            <small class="footer__copy">COPYRIGHT © SARAYA. ALL RIGHTS RESERVED.</small><!-- /.footer__copy -->
+            <small class="copy">CopyRight © SARAYA. All Rights Reserved.</small><!-- /.copy -->
 
         </div><!-- /.footer-contents -->
 
-        <div class="footer__to-top"></div><!-- /.footer__to-top -->
+        <div class="to-top"></div><!-- /.to-top -->
 
     </footer><!-- /.footer -->
 
