[Fix]top-aboutのリンク関連

--- a/index.html
+++ b/index.html
@@ -58,8 +58,10 @@
         <section id="about" class="about">
             <h2 class="section-title section-title_left">About</h2><!-- /.section-title -->
 
-            <div class="about-contents contents_mt layer_white layer_round">
-                <p class="about__lead-text">毎日の食卓にそっと寄り添う、あなただけのうつわ。</p><!-- /.about__lead-text -->
+            <div class="about-contents contents_mt">
+                <a href="/about/index.html" class="about__link layer_white layer_round">
+                    <p class="about__lead-text">毎日の食卓にそっと寄り添う、あなただけのうつわ。</p><!-- /.about__lead-text -->
+                </a><!-- /.about__link -->
             </div><!-- /.about-contents -->
         </section><!-- /.about -->
 
