[Add]下層ドロワーメニュー

--- a/about/index.html
+++ b/about/index.html
@@ -27,7 +27,7 @@
         <div class="under-header__inner flex-wrapper_c">
             <p class="under-header__logo">さらや</p><!-- /.under-header__logo -->
 
-            <button class="under-header__nav-btn">
+            <button type="button" class="under-header__nav-btn">
                 <span></span>
                 <span></span>
                 <span></span>
@@ -36,8 +36,8 @@
 
         <div class="under-header__open-contents">
             <nav class="under-header__nav">
-                <ul class="under-header__nav-list">
-                    <li class="under-header__nav-item"><a href="index.html" class="under-header__nav-link">Top</a><!-- /.under-header__nav-link --></li><!-- /.under-header__nav-item -->
+                <ul class="under-header__nav-list flex-wrapper_c">
+                    <li class="under-header__nav-item"><a href="/index.html" class="under-header__nav-link">Top</a><!-- /.under-header__nav-link --></li><!-- /.under-header__nav-item -->
                     <li class="under-header__nav-item"><a href="/about/index.html" class="under-header__nav-link">About</a><!-- /.under-header__nav-link --></li><!-- /.under-header__nav-item -->
                     <li class="under-header__nav-item"><a href="/products/index.html" class="under-header__nav-link">Products</a><!-- /.under-header__nav-link --></li><!-- /.under-header__nav-item -->
                     <li class="under-header__nav-item"><a href="/contact/index.html" class="under-header__nav-link">Contact</a><!-- /.under-header__nav-link --></li><!-- /.under-header__nav-item -->
@@ -45,11 +45,11 @@
             </nav><!-- /.under-header__nav -->
 
             <!-- sns -->
-            <div class="sns">
-                <div class="sns-contents">
-                    <h2 class="section-title">Follow us</h2><!-- /.section-title -->
+            <div class="under-header__sns contents_mt">
+                <h2 class="section-title section-title_cap">Follow us</h2><!-- /.section-title -->
 
-                    <ul class="sns-list">
+                <div class="sns-contents under-header__sns_mt">
+                    <ul class="sns-list flex-wrapper_c">
                         <li class="sns-list__item"><a href="#" class="sns-list__link"><i class="fab fa-instagram"></i></a></li><!-- /.sns-list__item -->
                         <li class="sns-list__item"><a href="#" class="sns-list__link"><i class="fab fa-twitter"></i></a></li><!-- /.sns-list__item -->
                         <li class="sns-list__item"><a href="#" class="sns-list__link"><i class="fab fa-facebook-f"></i></a></li><!-- /.sns-list__item -->
