--- a/contact/index.html
+++ b/contact/index.html
@@ -37,10 +37,10 @@
         <div class="under-header__open-contents">
             <nav class="under-header__nav">
                 <ul class="under-header__nav-list flex-wrapper_c">
-                    <li class="under-header__nav-item"><a href="/index.html" class="under-header__nav-link">Top</a><!-- /.under-header__nav-link --></li><!-- /.under-header__nav-item -->
-                    <li class="under-header__nav-item"><a href="/about/index.html" class="under-header__nav-link">About</a><!-- /.under-header__nav-link --></li><!-- /.under-header__nav-item -->
-                    <li class="under-header__nav-item"><a href="/products/index.html" class="under-header__nav-link">Products</a><!-- /.under-header__nav-link --></li><!-- /.under-header__nav-item -->
-                    <li class="under-header__nav-item"><a href="/contact/index.html" class="under-header__nav-link">Contact</a><!-- /.under-header__nav-link --></li><!-- /.under-header__nav-item -->
+                    <li class="under-header__nav-item"><a href="/index.html" class="under-header__nav-link">Top</a></li><!-- /.under-header__nav-item -->
+                    <li class="under-header__nav-item"><a href="/about/index.html" class="under-header__nav-link">About</a></li><!-- /.under-header__nav-item -->
+                    <li class="under-header__nav-item"><a href="/products/index.html" class="under-header__nav-link">Products</a></li><!-- /.under-header__nav-item -->
+                    <li class="under-header__nav-item"><a href="/contact/index.html" class="under-header__nav-link">Contact</a></li><!-- /.under-header__nav-item -->
                 </ul><!-- /.under-header__nav-list -->
             </nav><!-- /.under-header__nav -->
 
