[Add]products-レスポンシブ

--- a/products/index.html
+++ b/products/index.html
@@ -36,7 +36,7 @@
 
         <div class="under-header__open-contents">
             <nav class="under-header__nav">
-                <ul class="under-header__nav-list flex-wrapper_c">
+                <ul class="under-header__nav-list flex-wrapper_sb">
                     <li class="under-header__nav-item"><a href="/index.html" class="under-header__nav-link">Top</a></li><!-- /.under-header__nav-item -->
                     <li class="under-header__nav-item"><a href="/about/index.html" class="under-header__nav-link">About</a></li><!-- /.under-header__nav-item -->
                     <li class="under-header__nav-item"><a href="/products/index.html" class="under-header__nav-link">Products</a></li><!-- /.under-header__nav-item -->
@@ -60,9 +60,9 @@
         </div><!-- /.under-header__open-contents -->
 
     </header><!-- /.under-header -->
-
+    
     <div class="top-view top-view_products layer_white">
-        <h1 class="top-view__title">Products</h1><!-- /.top-view__title -->
+        <h1 class="top-view__title top-view__title_products">Products</h1><!-- /.top-view__title -->
     </div><!-- /.top-view -->
 
     <main class="main__inner">
