[Add]contact-レスポンシブ

--- a/contact/index.html
+++ b/contact/index.html
@@ -36,7 +36,7 @@
 
         <div class="under-header__open-contents">
             <nav class="under-header__nav">
-                <ul class="under-header__nav-list flex-wrapper_c">
+                <ul class="under-header__nav-list flex-wrapper_sb">
                     <li class="under-header__nav-item"><a href="/index.html" class="under-header__nav-link">Top</a></li><!-- /.under-header__nav-item -->
                     <li class="under-header__nav-item"><a href="/about/index.html" class="under-header__nav-link">About</a></li><!-- /.under-header__nav-item -->
                     <li class="under-header__nav-item"><a href="/products/index.html" class="under-header__nav-link">Products</a></li><!-- /.under-header__nav-item -->
@@ -197,7 +197,7 @@
         <section id="access" class="access">
             <h2 class="section-title">Access</h2><!-- /.section-title -->
 
-            <div class="access-contents contents_mt flex-wrapper_sb">
+            <div class="access-contents contents_mt flex-wrapper_sb flex-wrapper_md-block">
 
                 <div class="access__map-wrapper">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3243.8224439425167!2d139.6666989155021!3d35.60744618021153!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6018f51f0fbffc7b%3A0x92ea42cf08497ba6!2z44CSMTUyLTAwMzUg5p2x5Lqs6YO955uu6buS5Yy66Ieq55Sx44GM5LiY77yR5LiB55uu77yZ4oiS77yY!5e0!3m2!1sja!2sjp!4v1628966321092!5m2!1sja!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
@@ -247,7 +247,7 @@
 
         <div class="footer-contents">
 
-            <small class="copy">CopyRight © SARAYA. All Rights Reserved.</small><!-- /.copy -->
+            <small class="copy">CopyRight © SARAYA. <br class="br_sp">All Rights Reserved.</small><!-- /.copy -->
 
         </div><!-- /.footer-contents -->
 
