--- a/products/index.html
+++ b/products/index.html
@@ -60,7 +60,7 @@
         </div><!-- /.under-header__open-contents -->
 
     </header><!-- /.under-header -->
-    
+
     <div class="top-view top-view_products layer_white">
         <h1 class="top-view__title top-view__title_products">Products</h1><!-- /.top-view__title -->
     </div><!-- /.top-view -->
@@ -316,7 +316,7 @@
 
         <div class="footer-contents">
 
-            <small class="copy">CopyRight © SARAYA. All Rights Reserved.</small><!-- /.copy -->
+            <small class="copy">CopyRight © SARAYA. <br class="br_sp">All Rights Reserved.</small><!-- /.copy -->
 
         </div><!-- /.footer-contents -->
 
